test/corpus/assignment.txt
==================
Basic variable assignment
==================

x = 1

---

(chunk
  (assign_stmt
    (varlist
      (var
        (name)))
    (explist
      (number))))

==================
Multiple variable assignment
==================

a, b = 1, true

---

(chunk
  (assign_stmt
    (varlist
      (var
        (name))
      (var
        (name)))
    (explist
      (number)
      (boolean))))
      

==================
Complex variable assignment
==================

a, b, c.d.e[f][g][1], h:i().j[k]:l()[m] = true, false, 1, 4

---

(chunk
  (assign_stmt
    (varlist
      (var
        (name))
      (var
        (name))
      (var
        (name)
        (name)
        (name)
        (var
          (name))
        (var
          (name))
        (number))
      (var
        (call_stmt
          (var
            (call_stmt
              (var
                (name))
              (name)
              (arglist))
            (name)
            (var
              (name)))
          (name)
          (arglist))
        (var
          (name))))
      (explist
        (boolean)
        (boolean)
        (number)
        (number))))

==================
Local variable declaration, no assignment
==================

local x

---

(chunk
  (local_var_stmt
    (binding
      (name))))

==================
Local variable declaration
==================

local x = 1

---

(chunk
  (local_var_stmt
    (binding
      (name))
    (number)))

==================
Multiple Local variable declaration, no assignment
==================

local x, y

---

(chunk
  (local_var_stmt
    (binding
      (name))
    (binding
      (name))))

==================
Multiple Local variable declaration
==================

local x, y = 1, false

---

(chunk
  (local_var_stmt
    (binding
      (name))
    (binding
      (name))
    (number)
    (boolean)))

==================
Luau: Compound assignment
==================

a += 1

---

(chunk
  (var_stmt
    (var
      (name))
    (number)))
