test/corpus/expressions.txt
==================
Handles nil
==================

x = nil

---

(chunk
  (var_stmt
    (var (name))
    (nil)))

==================
Handles true
==================

x = true

---

(chunk
  (var_stmt
    (var (name))
    (boolean)))

==================
Handles false
==================

x = false

---

(chunk
  (var_stmt
    (var (name))
    (boolean)))

==================
Handles simple number
==================

x = 1

---

(chunk
  (var_stmt
    (var
      (name))
    (number)))

==================
Handles fractional number
==================

x = 1.50
x = .50

---

(chunk
  (var_stmt
    (var (name))
    (number))
  (var_stmt
    (var (name))
    (number)))

==================
Handles signed number
==================

x = -1

---

(chunk
  (var_stmt
    (var
      (name))
    (number)))

==================
Handles exponential number
==================

x = 1e5

---

(chunk
  (var_stmt
    (var
      (name))
    (number)))

==================
Handles hexadecimal number
==================

x = 0xFF

---

(chunk
  (var_stmt
    (var
      (name))
    (number)))

==================
Handles binary number
==================

x = 0b101011

---

(chunk
  (var_stmt
    (var
      (name))
    (number)))

==================
Luau: Handles number with separators
==================

x = 1_048_576
x = 0xFFFF_FFFF
x = 0b_0101_0101

---

(chunk
  (var_stmt
    (var (name))
    (number))
  (var_stmt
    (var (name))
    (number))
  (var_stmt
    (var (name))
    (number)))

==================
Handles binary addition
==================

x = 1 + 1

---

(chunk
  (var_stmt
    (var (name))
    (binexp (number) (number))))

==================
Handles binary addition of variables
==================

x = x + y

---

(chunk
  (var_stmt
    (var (name))
    (binexp (var (name)) (var (name)))))

==================
Handles binary and/or
==================

x = foo and bar
x = foo and bar or baz

---

(chunk
  (var_stmt
    (var (name))
    (binexp (var (name)) (var (name))))
  (var_stmt
    (var (name))
    (binexp
      (binexp (var (name)) (var (name)))
      (var (name)))))

==================
Handles simple table
==================

x = { true }

---

(chunk
  (var_stmt
    (var (name))
    (table
      (fieldlist (field (boolean))))))

==================
Handles name key tables
==================

x = { foo = bar, bar = baz }

---

(chunk
  (var_stmt
    (var (name))
    (table
      (fieldlist
        (field (name) (var (name)))
        (field (name) (var (name)))))))

==================
Handles expression key tables
==================

x = { ["foo"] = bar, [call()] = baz }

---

(chunk
  (var_stmt
    (var (name))
    (table
      (fieldlist
        (field (string) (var (name)))
        (field
          (call_stmt
            (var (name))
            (arglist))
          (var (name)))))))
